--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>تكنو تل – متجر الموبايلات</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
-  <style>
-    body{font-family:'Cairo',sans-serif;background:#f3f5f7}
-    .navbar{background:linear-gradient(90deg,#007bff,#0056d6);padding:15px 0}
-    .navbar-brand{color:#fff!important;font-size:28px;font-weight:700}
-    .hero{background:linear-gradient(135deg,#0056d6,#0090ff);color:#fff;padding:60px 20px;border-radius:20px;text-align:center;margin-top:20px}
-    .product-card{border-radius:18px;overflow:hidden;background:#fff;box-shadow:0 4px 20px rgba(0,0,0,.08);transition:.3s}
-    .product-card:hover{transform:translateY(-6px);box-shadow:0 8px 25px rgba(0,0,0,.12)}
-    .product-card img{width:100%;height:300px;object-fit:cover;border-bottom:1px solid #ddd}
-    .price{font-size:22px;color:#e91e63;font-weight:700}
-    .btn-whatsapp{background:#25D366;color:#fff;font-size:18px}
-    footer{background:#0d6efd;color:#fff;padding:20px;margin-top:50px;text-align:center}
-    .filter-btn{background:#0056d6;color:#fff;border:none;padding:10px 16px;border-radius:10px;margin:5px;font-size:16px}
-    .filter-btn:hover{background:#003c9d}
-  </style>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>تكنو تل – متجر الموبايلات</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
+<style>
+body{font-family:'Cairo',sans-serif;background:#f3f5f7;margin:0;padding:0}
+.navbar{background:linear-gradient(90deg,#007bff,#0056d6);padding:15px 0}
+.navbar-brand{color:#fff!important;font-size:28px;font-weight:700}
+.hero{background:linear-gradient(135deg,#0056d6,#0090ff);color:#fff;padding:60px 20px;border-radius:20px;text-align:center;margin:20px}
+.product-card{border-radius:18px;overflow:hidden;background:#fff;box-shadow:0 4px 20px rgba(0,0,0,.08);transition:.3s}
+.product-card:hover{transform:translateY(-6px);box-shadow:0 8px 25px rgba(0,0,0,.12)}
+.product-card img{width:100%;height:300px;object-fit:cover;border-bottom:1px solid #ddd}
+.price{font-size:22px;color:#e91e63;font-weight:700}
+.btn-whatsapp{background:#25D366;color:#fff;font-size:18px}
+footer{background:#0d6efd;color:#fff;padding:20px;margin-top:50px;text-align:center}
+.filter-btn{background:#0056d6;color:#fff;border:none;padding:10px 16px;border-radius:10px;margin:5px;font-size:16px;cursor:pointer}
+.filter-btn:hover{background:#003c9d}
+</style>
 </head>
 <body>
 
@@ -57,19 +57,21 @@
 </footer>
 
 <script>
-const WA_PHONE = '963934090901'; // رقم الواتساب
-let PRODUCTS = [];
+const WA_PHONE = '963934090901';
 let CURRENT_CATEGORY = 'all';
 
-async function loadProducts(){
-  try{
-    const res = await fetch('./products.json?_=' + Date.now());
-    PRODUCTS = await res.json();
-  }catch(e){
-    console.error('فشل تحميل products.json', e);
-    PRODUCTS = [];
-  }
-  renderProducts();
+// المنتجات هنا يمكنك تعديلها مباشرة
+const PRODUCTS = [
+  {name:"Samsung S22",price:"550$",category:"mobiles",image:"https://i.ibb.co/VcxDPkS7/IMG-20251123-121257.jpg",description:"هاتف ذكي مميز"},
+  {name:"iPhone 14",price:"800$",category:"mobiles",image:"https://i.ibb.co/album/iPhone14.jpg",description:"الأحدث من آبل"},
+  {name:"Fast Charger 25W",price:"12$",category:"chargers",image:"https://i.ibb.co/album/charger.jpg",description:"شاحن سريع"},
+  {name:"Type C Cable",price:"5$",category:"cables",image:"https://i.ibb.co/album/cable.jpg",description:"كابل Type-C"},
+  {name:"Bluetooth Headset",price:"15$",category:"bluetooth",image:"https://i.ibb.co/album/bluetooth.jpg",description:"سماعة بلوتوث عالية الجودة"}
+];
+
+function escapeHtml(str){
+  if(!str) return '';
+  return String(str).replace(/&/g,'&amp;').replace(/</g,'&lt;').replace(/>/g,'&gt;');
 }
 
 function renderProducts(){
@@ -78,26 +80,26 @@ function renderProducts(){
   const query = document.getElementById('searchInput').value.toLowerCase();
 
   const filtered = PRODUCTS.filter(p=>{
-    const matchCat = (CURRENT_CATEGORY === 'all') || (p.category === CURRENT_CATEGORY);
-    const matchText = (!query) || (p.name.toLowerCase().includes(query)) || (p.description && p.description.toLowerCase().includes(query));
+    const matchCat = (CURRENT_CATEGORY==='all')||(p.category===CURRENT_CATEGORY);
+    const matchText = (!query)||(p.name.toLowerCase().includes(query))||(p.description && p.description.toLowerCase().includes(query));
     return matchCat && matchText;
   });
 
-  if(filtered.length === 0){
+  if(filtered.length===0){
     container.innerHTML = '<div class="col-12 text-center text-muted">لا توجد منتجات للعرض</div>';
     return;
   }
 
   for(const p of filtered){
-    const col = document.createElement('div');
-    col.className = 'col-md-4 product-item';
-    col.innerHTML = `
+    const col=document.createElement('div');
+    col.className='col-md-4 product-item';
+    col.innerHTML=`
       <div class="product-card">
         <img src="${p.image}" alt="${escapeHtml(p.name)}">
         <div class="p-3">
           <h4>${escapeHtml(p.name)}</h4>
           <div class="price">${escapeHtml(p.price)}</div>
-          <p class="text-muted small">${p.description ? escapeHtml(p.description) : ''}</p>
+          <p class="text-muted small">${escapeHtml(p.description)}</p>
           <a href="https://wa.me/${WA_PHONE}?text=${encodeURIComponent('أريد شراء ' + p.name)}" target="_blank" class="btn btn-whatsapp w-100 mt-3">اطلب عبر واتساب</a>
         </div>
       </div>`;
@@ -105,131 +107,17 @@ function renderProducts(){
   }
 }
 
-function escapeHtml(str){
-  if(!str) return '';
-  return String(str).replace(/&/g,'&amp;').replace(/</g,'&lt;').replace(/>/g,'&gt;');
-}
-
 function setCategory(cat){
-  CURRENT_CATEGORY = cat;
-  applyFilters();
+  CURRENT_CATEGORY=cat;
+  renderProducts();
 }
 
 function applyFilters(){
   renderProducts();
 }
 
-// load on start
-loadProducts();
+// تحميل المنتجات عند فتح الصفحة
+renderProducts();
 </script>
-</body>
-</html>    <input id="searchInput" type="text" class="form-control form-control-lg text-center"
-           placeholder="ابحث عن جهاز..."
-           onkeyup="searchProducts()">
-</div>
-
-<!-- Filter Buttons -->
-<div class="container text-center mt-4">
-    <button class="filter-btn" onclick="filterProducts('all')">كل المنتجات</button>
-    <button class="filter-btn" onclick="filterProducts('mobiles')">موبايلات</button>
-    <button class="filter-btn" onclick="filterProducts('bluetooth')">سماعات بلوتوث</button>
-    <button class="filter-btn" onclick="filterProducts('cables')">كابلات</button>
-    <button class="filter-btn" onclick="filterProducts('chargers')">شواحن</button>
-</div>
-
-<!-- Products -->
-<div class="container mt-5">
-    <div class="row g-4" id="productList">
-
-        <!-- مثال: موبايل -->
-        <div class="col-md-4 product-item" data-category="mobiles" data-name="Samsung S22">
-            <div class="product-card">
-                <img src="https://i.ibb.co/VcxDPkS7/IMG-20251123-121257.jpg">
-                <div class="p-3">
-                    <h4>Samsung S22</h4>
-                    <div class="price">550$</div>
-                    <a href="https://wa.me/963934090901?text=أريد%20شراء%20Samsung%20S22"
-                       target="_blank" class="btn btn-whatsapp w-100 mt-3">اطلب عبر واتساب</a>
-                </div>
-            </div>
-        </div>
-
-        <!-- مثال: موبايل -->
-        <div class="col-md-4 product-item" data-category="mobiles" data-name="iPhone 14">
-            <div class="product-card">
-                <img src="https://i.ibb.co/album/iPhone14.jpg">
-                <div class="p-3">
-                    <h4>iPhone 14</h4>
-                    <div class="price">800$</div>
-                    <a href="#" class="btn btn-whatsapp w-100 mt-3">اطلب عبر واتساب</a>
-                </div>
-            </div>
-        </div>
-
-        <!-- مثال: شاحن -->
-        <div class="col-md-4 product-item" data-category="chargers" data-name="Fast Charger 25W">
-            <div class="product-card">
-                <img src="https://i.ibb.co/album/charger.jpg">
-                <div class="p-3">
-                    <h4>شاحن سامسونغ 25W</h4>
-                    <div class="price">12$</div>
-                    <a href="#" class="btn btn-whatsapp w-100 mt-3">اطلب عبر واتساب</a>
-                </div>
-            </div>
-        </div>
-
-        <!-- مثال: كابل -->
-        <div class="col-md-4 product-item" data-category="cables" data-name="Type C Cable">
-            <div class="product-card">
-                <img src="https://i.ibb.co/album/cable.jpg">
-                <div class="p-3">
-                    <h4>كابل Type-C</h4>
-                    <div class="price">5$</div>
-                    <a href="#" class="btn btn-whatsapp w-100 mt-3">اطلب عبر واتساب</a>
-                </div>
-            </div>
-        </div>
-
-        <!-- مثال: سماعة بلوتوث -->
-        <div class="col-md-4 product-item" data-category="bluetooth" data-name="Bluetooth Headset">
-            <div class="product-card">
-                <img src="https://i.ibb.co/album/bluetooth.jpg">
-                <div class="p-3">
-                    <h4>سماعة بلوتوث</h4>
-                    <div class="price">15$</div>
-                    <a href="#" class="btn btn-whatsapp w-100 mt-3">اطلب عبر واتساب</a>
-                </div>
-            </div>
-        </div>
-
-    </div>
-</div>
-
-<footer>
-    © 2025 تكنو تل — جميع الحقوق محفوظة
-</footer>
-
-<!-- Scripts -->
-<script>
-function filterProducts(category) {
-    let items = document.getElementsByClassName("product-item");
-    for (let item of items) {
-        item.style.display = (category === "all" || item.dataset.category === category)
-            ? "block"
-            : "none";
-    }
-}
-
-function searchProducts() {
-    let input = document.getElementById('searchInput').value.toLowerCase();
-    let items = document.getElementsByClassName('product-item');
-
-    for (let item of items) {
-        let name = item.getAttribute('data-name').toLowerCase();
-        item.style.display = name.includes(input) ? "block" : "none";
-    }
-}
-</script>
-
 </body>
 </html>
