--- a/index.html
+++ b/index.html
@@ -7,69 +7,174 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
 <style>
-body{font-family:'Cairo',sans-serif;background:#f3f5f7;margin:0;padding:0}
-.navbar{background:linear-gradient(90deg,#007bff,#0056d6);padding:15px 0}
-.navbar-brand{color:#fff!important;font-size:28px;font-weight:700}
-.hero{background:linear-gradient(135deg,#0056d6,#0090ff);color:#fff;padding:60px 20px;border-radius:20px;text-align:center;margin:20px}
-.product-card{border-radius:18px;overflow:hidden;background:#fff;box-shadow:0 4px 20px rgba(0,0,0,.08);transition:.3s}
-.product-card:hover{transform:translateY(-6px);box-shadow:0 8px 25px rgba(0,0,0,.12)}
-.product-card img{width:100%;height:300px;object-fit:cover;border-bottom:1px solid #ddd}
-.price{font-size:22px;color:#e91e63;font-weight:700}
-.btn-whatsapp{background:#25D366;color:#fff;font-size:18px}
-footer{background:#0d6efd;color:#fff;padding:20px;margin-top:50px;text-align:center}
-.filter-btn{background:#0056d6;color:#fff;border:none;padding:10px 16px;border-radius:10px;margin:5px;font-size:16px;cursor:pointer}
-.filter-btn:hover{background:#003c9d}
+body{
+  font-family:'Cairo',sans-serif;
+  background:#fff0f0;
+  margin:0;
+  padding:0;
+}
+
+/* Navbar */
+.navbar{
+  background:linear-gradient(90deg,#c62828,#b71c1c);
+  padding:20px 0;
+  box-shadow:0 4px 12px rgba(0,0,0,0.1);
+}
+.navbar-brand{
+  color:#fff!important;
+  font-size:30px;
+  font-weight:700;
+}
+
+/* Hero */
+.hero{
+  background:linear-gradient(135deg,#e53935,#d32f2f);
+  color:#fff;
+  padding:60px 20px;
+  border-radius:25px;
+  text-align:center;
+  margin:20px;
+  box-shadow:0 6px 20px rgba(0,0,0,0.15);
+}
+.hero h1{
+  font-size:40px;
+  font-weight:700;
+  margin-bottom:15px;
+}
+.hero p{
+  font-size:20px;
+}
+
+/* Search */
+#searchInput{
+  border-radius:25px;
+  border:2px solid #c62828;
+  padding:15px;
+  font-size:18px;
+  margin-top:20px;
+  box-shadow:0 4px 12px rgba(0,0,0,0.05);
+}
+
+/* Filter buttons */
+.filter-btn{
+  background:#c62828;
+  color:#fff;
+  border:none;
+  padding:12px 20px;
+  border-radius:15px;
+  margin:5px;
+  font-size:16px;
+  cursor:pointer;
+  transition:.3s;
+}
+.filter-btn:hover{
+  background:#b71c1c;
+  transform:translateY(-2px);
+}
+
+/* Product card */
+.product-card{
+  border-radius:20px;
+  overflow:hidden;
+  background:#fff;
+  box-shadow:0 6px 20px rgba(0,0,0,0.08);
+  transition:.4s;
+}
+.product-card:hover{
+  transform:translateY(-8px);
+  box-shadow:0 10px 30px rgba(0,0,0,0.15);
+}
+.product-card img{
+  width:100%;
+  height:320px;
+  object-fit:cover;
+  border-bottom:2px solid #f0f0f0;
+}
+.product-card h4{
+  font-size:22px;
+  font-weight:700;
+  margin-bottom:10px;
+}
+.price{
+  font-size:20px;
+  color:#d32f2f;
+  font-weight:700;
+}
+.btn-whatsapp{
+  background:#25D366;
+  color:#fff;
+  font-size:18px;
+  border-radius:12px;
+  transition:.3s;
+}
+.btn-whatsapp:hover{
+  background:#1ebe57;
+}
+
+/* Footer */
+footer{
+  background:#b71c1c;
+  color:#fff;
+  padding:25px;
+  margin-top:50px;
+  text-align:center;
+  font-weight:600;
+}
 </style>
 </head>
 <body>
 
+<!-- Navbar -->
 <nav class="navbar">
   <div class="container">
     <a class="navbar-brand" href="#">تكنو تل</a>
   </div>
 </nav>
 
+<!-- Hero -->
 <div class="container">
   <div class="hero shadow">
-    <h1>مرحباً بكم في تكنو تل</h1>
-    <p>أحدث الموبايلات – أفضل الأسعار – اطلب عبر الواتساب مباشرة</p>
+    <h1>تسوق أحدث الأجهزة</h1>
+    <p>أفضل الأسعار – اطلب بسهولة عبر الواتساب</p>
   </div>
 </div>
 
-<div class="container mt-4">
+<!-- Search -->
+<div class="container mt-3">
   <input id="searchInput" type="text" class="form-control form-control-lg text-center" placeholder="ابحث عن جهاز..." oninput="applyFilters()">
 </div>
 
+<!-- Filter Buttons -->
 <div class="container text-center mt-4">
-  <!-- الأقسام -->
   <button class="filter-btn" onclick="setCategory('all')">كل المنتجات</button>
   <button class="filter-btn" onclick="setCategory('mobiles')">موبايلات</button>
   <button class="filter-btn" onclick="setCategory('bluetooth')">سماعات بلوتوث</button>
   <button class="filter-btn" onclick="setCategory('cables')">كابلات</button>
   <button class="filter-btn" onclick="setCategory('chargers')">شواحن</button>
-  <button class="filter-btn" onclick="setCategory('smartwatches')">ساعات ذكية</button> <!-- مثال قسم جديد -->
+  <button class="filter-btn" onclick="setCategory('smartwatches')">ساعات ذكية</button>
 </div>
 
+<!-- Products -->
 <div class="container mt-5">
   <div class="row g-4" id="productList"></div>
 </div>
 
+<!-- Footer -->
 <footer>
   © 2025 تكنو تل — جميع الحقوق محفوظة
 </footer>
 
 <script>
-const WA_PHONE = '963934090901'; // رقم الواتساب
+const WA_PHONE = '963934090901';
 let CURRENT_CATEGORY = 'all';
 
-// المنتجات الثابتة، أضف منتجات جديدة هنا بنفس الصيغة
 const PRODUCTS = [
   {name:"Samsung S22",price:"550$",category:"mobiles",image:"https://i.ibb.co/VcxDPkS7/IMG-20251123-121257.jpg",description:"هاتف ذكي مميز"},
   {name:"iPhone 14",price:"800$",category:"mobiles",image:"https://i.ibb.co/album/iPhone14.jpg",description:"الأحدث من آبل"},
   {name:"Fast Charger 25W",price:"12$",category:"chargers",image:"https://i.ibb.co/album/charger.jpg",description:"شاحن سريع"},
   {name:"Type C Cable",price:"5$",category:"cables",image:"https://i.ibb.co/album/cable.jpg",description:"كابل Type-C"},
   {name:"Bluetooth Headset",price:"15$",category:"bluetooth",image:"https://i.ibb.co/album/bluetooth.jpg",description:"سماعة بلوتوث عالية الجودة"},
-  {name:"Apple Watch 8",price:"400$",category:"smartwatches",image:"https://i.ibb.co/album/watch.jpg",description:"ساعة ذكية من آبل"} // منتج القسم الجديد
+  {name:"Apple Watch 8",price:"400$",category:"smartwatches",image:"https://i.ibb.co/album/watch.jpg",description:"ساعة ذكية من آبل"}
 ];
 
 function escapeHtml(str){
@@ -81,18 +186,15 @@ function renderProducts(){
   const container = document.getElementById('productList');
   container.innerHTML = '';
   const query = document.getElementById('searchInput').value.toLowerCase();
-
   const filtered = PRODUCTS.filter(p=>{
     const matchCat = (CURRENT_CATEGORY==='all')||(p.category===CURRENT_CATEGORY);
     const matchText = (!query)||(p.name.toLowerCase().includes(query))||(p.description && p.description.toLowerCase().includes(query));
     return matchCat && matchText;
   });
-
   if(filtered.length===0){
     container.innerHTML = '<div class="col-12 text-center text-muted">لا توجد منتجات للعرض</div>';
     return;
   }
-
   for(const p of filtered){
     const col=document.createElement('div');
     col.className='col-md-4 product-item';
@@ -111,6 +213,20 @@ function renderProducts(){
 }
 
 function setCategory(cat){
+  CURRENT_CATEGORY=cat;
+  renderProducts();
+}
+
+function applyFilters(){
+  renderProducts();
+}
+
+// تحميل المنتجات عند فتح الصفحة
+renderProducts();
+</script>
+
+</body>
+</html>function setCategory(cat){
   CURRENT_CATEGORY=cat;
   renderProducts();
 }
